--- a/project01.html
+++ b/project01.html
@@ -27,8 +27,8 @@
             <input type="file" id="fileInput">
             <br>
             <div class="buttons">
-                <button class="btn-decrypt" onclick="handleFile('decrypt')">Decrypt</button>
-                <button class="btn-encrypt" onclick="handleFile('encrypt')">Encrypt</button>
+                <button class="btn-encrypt" onclick="encryptFile('encrypt')">Encrypt</button>
+                <button class="btn-decrypt" onclick="decryptFile()">Decrypt</button>
                 <a id="downloadLink" style="display: none;">Download Encrypted File</a>
             </div>
         </div>
