--- a/project01.html
+++ b/project01.html
@@ -27,7 +27,7 @@
             <input type="file" id="fileInput">
             <br>
             <div class="buttons">
-                <button class="btn-encrypt" onclick="encryptFile('encrypt')">Encrypt</button>
+                <button class="btn-encrypt" onclick="encryptFile()">Encrypt</button>
                 <button class="btn-decrypt" onclick="decryptFile()">Decrypt</button>
                 <a id="downloadLink" style="display: none;">Download Encrypted File</a>
             </div>
